--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ rs-mid/grupa_c/rs-mid-c.md
 /rs-final-24-25
 /rs-final-primjer
 /rs-final
+RS1 - Ponavljanje Pythona/Raspodijeljeni sustavi (RS)-typora.md
