--- a/.prettierignore
+++ b/.prettierignore
@@ -1,1 +1,2 @@
 /Users/lukablaskovic/Github/FIPU-RS/rs-mid/primjer-kolokvija-25-26/primjer-rs-mid-25-26.md
+/Users/lukablaskovic/Github/FIPU-RS/rs-mid/rs-mid-2025/rs-mid-A-25-26.md
