--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ rs-mid/grupa_c/rs-mid-c.md
 /rs-final-primjer
 /rs-final
 RS1 - Ponavljanje Pythona/Raspodijeljeni sustavi (RS)-typora.md
+/rs-mid/rs-mid-2025
