--- a/RS5 - Mikroservisna arhitektura/examples/e-commerce-app/order-service/.env.template
+++ b/RS5 - Mikroservisna arhitektura/examples/e-commerce-app/order-service/.env.template
@@ -6,3 +6,5 @@ LOG_LEVEL=INFO
 INFOBIP_API_KEY=infobip kljuc
 INFOBIP_API_BASE_URL=infobip base url
 INFOBIP_SMS_SENDER=infobip sender broj
+
+CATALOG_SERVICE_BASE_URL=http://localhost:8002
