--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ rs-mid/grupa_c/rs-mid-c.md
 /rs-final
 RS1 - Ponavljanje Pythona/Raspodijeljeni sustavi (RS)-typora.md
 /rs-mid/rs-mid-2025
+/Users/lukablaskovic/Github/FIPU-RS/RS7 - Docker kontejnerizacija/old-lb.md
