--- a/RS7 - Docker kontejnerizacija/weather-api/Dockerfile
+++ b/RS7 - Docker kontejnerizacija/weather-api/Dockerfile
@@ -1,8 +1,6 @@
-# compose-example/aiohttp-regije/Dockerfile
-
 FROM python:3.11-slim
 WORKDIR /app
 COPY . /app
 RUN pip install -r requirements.txt
-EXPOSE 4000
-CMD ["python", "app.py"]
+EXPOSE 8080
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
